ingress/hj-svc-clusterip-ing-mul.yml
apiVersion: v1
kind: Service
metadata:
  name: clusteripforing
spec:
  type: ClusterIP
  selector:
    app: ing
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
